holyc-parser/tests/corpus/passing/085-stmt-stmt-if.hc
U0 SE_if() { I64 x=1; if (x) x=2; }
