holyc-parser/tests/corpus/failing/012-errors-err-invalid-lval.hc
U0 EIL_f() { 1 = 2; }
